完成前后端shiro流程

--- a/angular4/src/assets/i18n/en.json
+++ b/angular4/src/assets/i18n/en.json
@@ -3,14 +3,13 @@
         "welcome":"Welcome",
         "logout":"Logout",
         "login":"Login",
-        "register":"Register",
         "articles":"Articles",
-        "doc":"Document",
+        "explore":"Explore",
         "console":"Console"
     },
     "post":{
         "publish":"publish"
-    },    
+    },
     "userRegister":{
         "userSignUp":"User Sign Up",
         "userName":"UserName:",
