--- a/angular4/src/assets/i18n/en.json
+++ b/angular4/src/assets/i18n/en.json
@@ -8,7 +8,8 @@
         "console":"Console"
     },
     "post":{
-        "publish":"publish"
+        "publish":"publish",
+        "sticky":"Sticky"
     },
     "userRegister":{
         "userSignUp":"User Sign Up",
