--- a/angular4/src/assets/i18n/zh.json
+++ b/angular4/src/assets/i18n/zh.json
@@ -8,7 +8,8 @@
         "console": "管理后台"
     },
     "post": {
-        "publish": "发布文章"
+        "publish": "发布文章",
+        "sticky":"置顶"
     },
     "userRegister":{
         "userSignUp":"用户注册",
