完成评论回复功能

--- a/angular4/src/assets/i18n/en.json
+++ b/angular4/src/assets/i18n/en.json
@@ -22,7 +22,12 @@
     },
     "comment":{
       "loading":"Loading ...",
-      "loadmore":"Load More"
+      "loadmore":"Load More",
+      "delete":"delete",
+      "replay":"replay",
+      "cancelReplay":"cancel",
+      "submit":"Submit",
+      "author":"author"
     },
     "search":"search",
     "submit":"Submit",
