完成评论管理功能

--- a/angular4/src/assets/i18n/en.json
+++ b/angular4/src/assets/i18n/en.json
@@ -39,5 +39,7 @@
     "lastPage":"Last",
     "previousPage":"Previous",
     "nextPage":"Next",
-    "edit":"edit"
+    "add":"Add",
+    "delete":"Delete",
+    "edit":"Edit"
 }
