--- a/angular4/src/assets/i18n/zh.json
+++ b/angular4/src/assets/i18n/zh.json
@@ -39,5 +39,7 @@
     "lastPage": "末页",
     "previousPage": "上一页",
     "nextPage": "下一页",
+    "add":"新增",
+    "delete":"删除",
     "edit":"编辑"
 }
